# ChangeLog for net-im/ejabberd
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.27 2008/01/11 11:43:33 opfer Exp $

*ejabberd-1.1.4-r1 (11 Jan 2008)

  11 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
  +files/ejabberd-1.1.4-erlang-12.patch, +ejabberd-1.1.4-r1.ebuild:
  make ejabberd compile with Erlang 12B, patch take from Debian, reported in
  bug 202114 by Conrad Kostecki <ConiKost AT gmx DOT de>, thanks to Anton
  Romanov <theli AT ukr DOT net>

  08 Dec 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/ejabberd-1.1.1-r1.initd, +files/ejabberd-1.1.1.confd:
  Restore initd and confd files that are still needed.

  08 Dec 2007; Tony Vroon <chainsaw@gentoo.org> -files/ejabberd-0.7.5.confd,
  -files/ejabberd-0.7.5.initd, -files/ejabberd-1.1.1-r1.initd,
  -files/ejabberd-1.1.1.confd, -files/ejabberd-1.1.1.initd,
  -ejabberd-0.7.5.ebuild, -ejabberd-1.1.1.ebuild, -ejabberd-1.1.1-r1.ebuild,
  -ejabberd-1.1.2-r1.ebuild:
  Remove old ebuilds, including 1.1.1 which used an insecure docert statement
  (per suggestion of Ulrich Mueller <ulm@gentoo.org> on IRC). Closes bug
  #201677.

*ejabberd-1.1.4 (14 Sep 2007)

  14 Sep 2007; Tony Vroon <chainsaw@gentoo.org> +files/ejabberd-1.1.4.initd,
  +files/1.1.4-missing-declaration.patch, +ejabberd-1.1.4.ebuild:
  Version bump, closes bugs #188679, #192012 and #190266.

  01 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  ejabberd-1.1.3-r2.ebuild:
  add a space that got lost in my previous change, reported by OlegON
  <olegon.mail@gmail.com> in bug 190944

  29 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
  ejabberd-1.1.3-r2.ebuild:
  remove restriction on lower erlang versions, see bug 184419; added some
  quotes around variables

*ejabberd-1.1.3-r2 (13 Jul 2007)

  13 Jul 2007; Tony Vroon <chainsaw@gentoo.org> +ejabberd-1.1.3-r2.ebuild:
  Debugging support by Justin <justin-gentoo@openaether.org>, closes bug