@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 1.1.3-missing-declaration.patch 334 RMD160 af3e6f2560533ab5fcda7c8ac3d4789324ea8023 SHA1 a04bbfaa748ec3d45f0c3bb5fbc50d2d8b520d9f SHA256 c3ecd6e3b2fc7548eaa151754020ff9d799de7ea0d9efc9afd6db06a84422736
 MD5 c854f25b314977635042247d7b60018b files/1.1.3-missing-declaration.patch 334
 RMD160 af3e6f2560533ab5fcda7c8ac3d4789324ea8023 files/1.1.3-missing-declaration.patch 334
@@ -64,18 +67,18 @@ EBUILD ejabberd-1.1.3.ebuild 3367 RMD160 153663a118ebf45fce1cd68e9b3e7497bd7d596
 MD5 9a0a9f44b9a2b5f6df72c179ee70feff ejabberd-1.1.3.ebuild 3367
 RMD160 153663a118ebf45fce1cd68e9b3e7497bd7d5960 ejabberd-1.1.3.ebuild 3367
 SHA256 cac88de8d3e24bf40c8729a226ff56807a7b8c4b6519761381f0883221b9255e ejabberd-1.1.3.ebuild 3367
-EBUILD ejabberd-1.1.4-r1.ebuild 3459 RMD160 894a88fec42e194b7142e923d9af3b0a8e71ee62 SHA1 4cf876ab4b936944ef8afd434266a23f8d6183b7 SHA256 ec36215388164b5e37d18f38852af123003eb43b5d55eab419b4072594b479ee
-MD5 3e0dddaa427ef116d83a568709a1690e ejabberd-1.1.4-r1.ebuild 3459
-RMD160 894a88fec42e194b7142e923d9af3b0a8e71ee62 ejabberd-1.1.4-r1.ebuild 3459
-SHA256 ec36215388164b5e37d18f38852af123003eb43b5d55eab419b4072594b479ee ejabberd-1.1.4-r1.ebuild 3459
+EBUILD ejabberd-1.1.4-r1.ebuild 3454 RMD160 b5d68a4304ed7eaa3634cce61f5ea9ab950e5321 SHA1 e090e7a05d4c8fb639dc11a5409bee1999bc5134 SHA256 f88196beb2d1eeb7cd8d699f05c8578f6e303224d36450307dccda02794ac086
+MD5 de1ee3ec6732579d27f65d8309205c1e ejabberd-1.1.4-r1.ebuild 3454
+RMD160 b5d68a4304ed7eaa3634cce61f5ea9ab950e5321 ejabberd-1.1.4-r1.ebuild 3454
+SHA256 f88196beb2d1eeb7cd8d699f05c8578f6e303224d36450307dccda02794ac086 ejabberd-1.1.4-r1.ebuild 3454
 EBUILD ejabberd-1.1.4.ebuild 3398 RMD160 27a04ce2f5b4b1ab0242c31b8e43d05d5fc17993 SHA1 1e06c37bde6bf4cb5cfa0218a14939bb394567cf SHA256 5ed0d6bfc3a034670a5821fbfcaf1e3c0d15ea3b89d888e997602f4dc62c640f
 MD5 d254afd0df6255f5e306406edbb193ae ejabberd-1.1.4.ebuild 3398
 RMD160 27a04ce2f5b4b1ab0242c31b8e43d05d5fc17993 ejabberd-1.1.4.ebuild 3398
 SHA256 5ed0d6bfc3a034670a5821fbfcaf1e3c0d15ea3b89d888e997602f4dc62c640f ejabberd-1.1.4.ebuild 3398
-MISC ChangeLog 6189 RMD160 69a3b6389a2e0034c38053e40060255f53406786 SHA1 e6a54ff2de6e974b45857d9f7844e2975b834bed SHA256 de4c1a724d95fa7e827d70fdeeb049f80d2c7c489fe56d6b51818fef12f8feb6
-MD5 2b44ce5ab8752ef7cde58a12b4f04e86 ChangeLog 6189
-RMD160 69a3b6389a2e0034c38053e40060255f53406786 ChangeLog 6189
-SHA256 de4c1a724d95fa7e827d70fdeeb049f80d2c7c489fe56d6b51818fef12f8feb6 ChangeLog 6189
+MISC ChangeLog 6296 RMD160 77c7a6d994e529c391deda63148b604ae9bfd200 SHA1 3839ad53d3dcb3cefd85623b5fdd0cf378d38976 SHA256 c84f81ea9be9970753936923bf426fd8e3686eeb87b25a9720ba4a2c81a1f953
+MD5 d72a94436c09e2a6341c055a56a4d0e9 ChangeLog 6296
+RMD160 77c7a6d994e529c391deda63148b604ae9bfd200 ChangeLog 6296
+SHA256 c84f81ea9be9970753936923bf426fd8e3686eeb87b25a9720ba4a2c81a1f953 ChangeLog 6296
 MISC metadata.xml 383 RMD160 dcf83a193e8c65bca36c368d8b4b70759bf1a7ee SHA1 2e1a9e8406a47ceb62f0d9edcabd27668b412634 SHA256 c1afbca95c1be1d2095a4dcd6ba39c8d1dd1974993b0f800264add3c18428a55
 MD5 2a43b0fd5e7b6404b98548ac55046b3f metadata.xml 383
 RMD160 dcf83a193e8c65bca36c368d8b4b70759bf1a7ee metadata.xml 383
@@ -95,3 +98,10 @@ SHA256 aa9a0367dae2f4b694e73892e917dc58d8fca9e7c4029b855b34e487482b1835 files/di
 MD5 77ab7ab7a3acee10a7ad96b594a96a0b files/digest-ejabberd-1.1.4-r1 244
 RMD160 c4236c87a7e5a96c87b37ecf516008f60614f4c2 files/digest-ejabberd-1.1.4-r1 244
 SHA256 aa9a0367dae2f4b694e73892e917dc58d8fca9e7c4029b855b34e487482b1835 files/digest-ejabberd-1.1.4-r1 244
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHoXSGNQqtfCuFneMRAu0HAJ9ZpHrXiuKT0z/D+vXqX6q9ihNyTACeIHI1
++ZpADgJJ+Con4SlX6rde2TM=
+=nf8t
+-----END PGP SIGNATURE-----
