@@ -1,6 +1,10 @@
 # ChangeLog for net-im/ejabberd
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.27 2008/01/11 11:43:33 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/ejabberd/ChangeLog,v 1.28 2008/01/31 07:10:01 opfer Exp $
+
+  31 Jan 2008; Christian Faulhammer <opfer@gentoo.org>
+  ejabberd-1.1.4-r1.ebuild:
+  emergency stable x86
 
 *ejabberd-1.1.4-r1 (11 Jan 2008)
 
